Projeto Jesus alterei o nav pelo menu

--- a/jesus/index.html
+++ b/jesus/index.html
@@ -10,12 +10,12 @@
   <body>
     <header>
       <h1>A Magia do Biscuit</h1>
-      <nav id="itens">
+      <menu id="itens">
         <a href="#">Home</a>
         <a href="#">Sobre</a>
         <a href="#">Produtos</a>
         <a href="#">Cantinho de Fé</a>
-      </nav>
+      </menu>
       <div class="social-icons">
         <a href="https://www.instagram.com/a_magia_do_biscuit/" target="_blank" rel="noreferrer noopener nofollow" title="A Magia do Biscuit" class="instagram">Instagram</a>
         <i class='bx bxl-instagram'></i>
