Alteração de Código do css

--- a/jesus/index.html
+++ b/jesus/index.html
@@ -11,16 +11,18 @@
     <header>
       <h1>A Magia do Biscuit</h1>
       <menu id="itens">
-        <a href="#">Home</a>
-        <a href="#">Sobre</a>
-        <a href="#">Produtos</a>
-        <a href="#">Cantinho de Fé</a>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Produtos</a></li>
+            <li><a href="#">Cantinho de Fé</a></li>
+          </ul>
       </menu>
       <div class="social-icons">
+        <a href="https://www.instagram.com/a_magia_do_biscuit/"><i class='bx bxl-instagram'></i></a>
         <a href="https://www.instagram.com/a_magia_do_biscuit/" target="_blank" rel="noreferrer noopener nofollow" title="A Magia do Biscuit" class="instagram">Instagram</a>
-        <i class='bx bxl-instagram'></i>
+        <a href="#"><i class='bx bxl-whatsapp'></i></a>
         <a href="#" class="whatsapp">Whatsapp (16) 9 9428-8517</a>
-        <i class='bx bxl-whatsapp'></i>
       </div>
     </header>
   </body>
