Aprendendo posicionamento de imagens

--- a/Exercícios/ex022/fundo003.html
+++ b/Exercícios/ex022/fundo003.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste de Imagem de Fundo</title>
+    <title>Posição dos fundos</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="teste2">
-    <div class="quadrado" id="q1">
+<body>
+    <div class="bloco" id="qu1">
         
     </div>
-    <div class="quadrado" id="q2">
+    <div class="bloco" id="qu2">
 
     </div>
-    <div class="quadrado" id="q3">
+    <div class="bloco" id="qu3">
 
     </div>
 </body>
