--- a/Exercícios/ex022/fundo002.html
+++ b/Exercícios/ex022/fundo002.html
@@ -3,18 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste de Imagem de Fundo</title>
+    <title>Personalização dos fundos</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="teste2">
-    <div class="quadrado" id="q1">
-        
-    </div>
-    <div class="quadrado" id="q2">
-
-    </div>
-    <div class="quadrado" id="q3">
-
+<body>
+    <div class="imagem-externa">
+        <img src="" alt="">
     </div>
 </body>
 </html>
