--- a/Exercícios/ex022/fundo004.html
+++ b/Exercícios/ex022/fundo004.html
@@ -3,18 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste de Imagem de Fundo</title>
+    <title>Posicionamento</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="teste2">
-    <div class="quadrado" id="q1">
-        
-    </div>
-    <div class="quadrado" id="q2">
-
-    </div>
-    <div class="quadrado" id="q3">
-
-    </div>
+<body class="teste">
+    
 </body>
 </html>
