--- a/jesus/index.html
+++ b/jesus/index.html
@@ -19,9 +19,9 @@
           </ul>
       </menu>
       <div class="social-icons">
-        <a href="https://www.instagram.com/a_magia_do_biscuit/"><i class='bx bxl-instagram'></i></a>
+        <a href="https://www.instagram.com/a_magia_do_biscuit/" title="instagram"><i class='bx bxl-instagram'></i></a>
         <a href="https://www.instagram.com/a_magia_do_biscuit/" target="_blank" rel="noreferrer noopener nofollow" title="A Magia do Biscuit" class="instagram">Instagram</a>
-        <a href="#"><i class='bx bxl-whatsapp'></i></a>
+        <a href="#"><i class='bx bxl-whatsapp' title="whatsapp"></i></a>
         <a href="#" class="whatsapp">Whatsapp (16) 9 9428-8517</a>
       </div>
     </header>
