--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -97,7 +97,7 @@
     <footer>
       <p>
         Site criado por
-        <a href="https://gustavoguanabara.github.io" target="_blank" rel="noopener">Gustavo Guanabara</a>
+        <a href="https://gustavoguanabara.github.io" target="_blank" rel="noopener">Luís da S. C. Júnior</a>
         para o
         <a href="https://www.cursoemvideo.com" target="_blank" rel="noopener">CursoemVideo</a>
       </p>
