--- a/Exercícios/ex023/tabela002.html
+++ b/Exercícios/ex023/tabela002.html
@@ -18,14 +18,15 @@
                 TR, TD, TH
             -->
     <table class="tabela002">
+      <caption>População das Unidades Federativas</caption>
       <thead>
-        <th>Posição</th>
-        <th>Estado</th>
-        <th>População (Censo de 2022)</th>
-        <th>População (Censo de 2010)</th>
-        <th>Mudança</th>
-        <th>% da População Total</th>
-        <th>País comparável (Habitantes)</th>
+        <th scope="col">Posição</th>
+        <th scope="col">Estado</th>
+        <th scope="col">População (Censo de 2022)</th>
+        <th scope="col">População (Censo de 2010)</th>
+        <th scope="col">Mudança</th>
+        <th scope="col">% da População Total</th>
+        <th scope="col">País comparável (Habitantes)</th>
       </thead>
       <tbody>
         <tr>
@@ -383,7 +384,7 @@
       </tbody>
       <tfoot>
         <tr>
-          <th></th>
+          <th scope="col"></th>
           <td></td>
           <td><strong>203 078 389</strong></td>
           <td><strong>190 755 799</strong></td>
