--- a/jesus/index.html
+++ b/jesus/index.html
@@ -8,16 +8,16 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
-    <header>
-      <h1>A Magia do Biscuit</h1>
-      <menu id="itens">
-          <ul>
+    <header id="reader">
+      <a href="www.amagiadobiscuit.com.br" id="logo">A Magia do Biscuit</a>
+      <nav id="nav">
+          <ul id="menu">
             <li><a href="#">Home</a></li>
             <li><a href="#">Sobre</a></li>
             <li><a href="#">Produtos</a></li>
             <li><a href="#">Cantinho de Fé</a></li>
           </ul>
-      </menu>
+      </nav>
       <div class="social-icons">
         <a href="https://www.instagram.com/a_magia_do_biscuit/" title="instagram"><i class='bx bxl-instagram'></i></a>
         <a href="https://www.instagram.com/a_magia_do_biscuit/" target="_blank" rel="noreferrer noopener nofollow" title="A Magia do Biscuit" class="instagram">Instagram</a>
