Alterando o botão de menu do projeto Jesus

--- a/jesus/index.html
+++ b/jesus/index.html
@@ -8,9 +8,12 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
-    <header id="reader">
+    <header id="header">
       <a href="www.amagiadobiscuit.com.br" id="logo">A Magia do Biscuit</a>
       <nav id="nav">
+        <button id="btn-mobile">Menu
+          <span id="hamburger"></span>
+        </button>
           <ul id="menu">
             <li><a href="#">Home</a></li>
             <li><a href="#">Sobre</a></li>
@@ -25,5 +28,6 @@
         <a href="#" class="whatsapp">Whatsapp (16) 9 9428-8517</a>
       </div>
     </header>
+    <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
