--- a/jesus/index.html
+++ b/jesus/index.html
@@ -11,10 +11,10 @@
     <header id="header">
       <a href="www.amagiadobiscuit.com.br" id="logo">A Magia do Biscuit</a>
       <nav id="nav">
-        <button id="btn-mobile">Menu
+        <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">Menu
           <span id="hamburger"></span>
         </button>
-          <ul id="menu">
+          <ul id="menu" aria-roledescription="menu">
             <li><a href="#">Home</a></li>
             <li><a href="#">Sobre</a></li>
             <li><a href="#">Produtos</a></li>
