--- a/jesus/index.html
+++ b/jesus/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <header id="header">
-      <a href="www.amagiadobiscuit.com.br" id="logo">A Magia do Biscuit</a>
+      <a href="www.amagiadobiscuit.com.br" id="logo" target="_blank">A Magia do Biscuit</a>
       <nav id="nav">
-        <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">Menu
+        <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false" type="button">Menu
           <span id="hamburger"></span>
         </button>
           <ul id="menu" aria-roledescription="menu">
@@ -19,15 +19,22 @@
             <li><a href="#">Sobre</a></li>
             <li><a href="#">Produtos</a></li>
             <li><a href="#">Cantinho de Fé</a></li>
+            <li><a href="https://www.instagram.com/a_magia_do_biscuit/" title="instagram" target="_blank" rel="noopener"><i class='bx bxl-instagram'> Instagram</i></a></li>
+            <li><a href="#"><i class='bx bxl-whatsapp' title="whatsapp"> Whatsapp (16) 9 9428-8517</i></a></li>
           </ul>
       </nav>
-      <div class="social-icons">
-        <a href="https://www.instagram.com/a_magia_do_biscuit/" title="instagram"><i class='bx bxl-instagram'></i></a>
-        <a href="https://www.instagram.com/a_magia_do_biscuit/" target="_blank" rel="noreferrer noopener nofollow" title="A Magia do Biscuit" class="instagram">Instagram</a>
-        <a href="#"><i class='bx bxl-whatsapp' title="whatsapp"></i></a>
-        <a href="#" class="whatsapp">Whatsapp (16) 9 9428-8517</a>
-      </div>
     </header>
+    <main>
+      <h1>Destaques</h1>
+      <div>
+        <a href="#"><img src="imagens/12023-11-15 at 09.42.34.jpg" alt=""></a>
+        <a href="#"><img src="imagens/12023-11-15 at 09.42.34.jpg" alt=""></a>
+        <a href="#"><img src="imagens/12023-11-15 at 09.42.34.jpg" alt=""></a>
+        <a href="#"><img src="imagens/12023-11-15 at 09.42.34.jpg" alt=""></a>
+        <a href="#"><img src="imagens/12023-11-15 at 09.42.34.jpg" alt=""></a>
+        <a href="#"><img src="imagens/12023-11-15 at 09.42.34.jpg" alt=""></a>
+      </div>
+    </main>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
