--- a/jesus/index.html
+++ b/jesus/index.html
@@ -26,13 +26,26 @@
     </header>
     <main>
       <h1>Destaques</h1>
-      <div>
-        <a href="#"><img src="imagens/12023-11-15 at 09.42.34.jpg" alt=""></a>
-        <a href="#"><img src="imagens/12023-11-15 at 09.42.34.jpg" alt=""></a>
-        <a href="#"><img src="imagens/12023-11-15 at 09.42.34.jpg" alt=""></a>
-        <a href="#"><img src="imagens/12023-11-15 at 09.42.34.jpg" alt=""></a>
-        <a href="#"><img src="imagens/12023-11-15 at 09.42.34.jpg" alt=""></a>
-        <a href="#"><img src="imagens/12023-11-15 at 09.42.34.jpg" alt=""></a>
+      <div class="slide-container">
+        <div class="slide-content">
+          <div class="card-wrapper">
+            <div class="card">
+              <div class="image-content">
+                <span class="overlay">
+
+                </span>
+                <div class="card-image">
+                  <img src="imagens/12023-11-15 at 09.42.34.jpg" alt="" class="card-img">
+                </div>
+              </div>
+              <div class="card-content">
+                <h2 class="name">Terço de Nossa Senhora de Fátima</h2>
+                <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, animi quia repudiandae itaque facere maxime doloribus beatae suscipit quos, earum qui laborum tempore odio, non eum sit perspiciatis ut ea!</p>
+                <button type="button" class="button">Veja Mais</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <script type="text/javascript" src="js/script.js"></script>
