--- a/jesus/index.html
+++ b/jesus/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A Magia do Biscuit</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
   </head>
   <body>
     <header id="header">
@@ -24,30 +26,32 @@
           </ul>
       </nav>
     </header>
-    <main>
-      <h1>Destaques</h1>
-      <div class="slide-container">
+    <h1>Destaques</h1>
+    <main class="destaque">
+      <div class="slide-container swiper">
         <div class="slide-content">
-          <div class="card-wrapper">
-            <div class="card">
+          <div class="card-wrapper swiper-wrapper">
+            <div class="card swiper-slide">
               <div class="image-content">
-                <span class="overlay">
-
-                </span>
+                <span class="overlay"></span>
                 <div class="card-image">
-                  <img src="imagens/12023-11-15 at 09.42.34.jpg" alt="" class="card-img">
+                  <img src="imagens/12023-11-15 at 09.42.34.jpg" alt="Terço" class="card-img">
                 </div>
               </div>
               <div class="card-content">
-                <h2 class="name">Terço de Nossa Senhora de Fátima</h2>
-                <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, animi quia repudiandae itaque facere maxime doloribus beatae suscipit quos, earum qui laborum tempore odio, non eum sit perspiciatis ut ea!</p>
-                <button type="button" class="button">Veja Mais</button>
+                <h2 class="name">Terço</h2>
+                <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum totam porro possimus nisi perspiciatis, consequuntur blanditiis nostrum quibusdam illum necessitatibus libero repellendus, modi doloremque dignissimos eaque! Animi illo excepturi ullam.</p>
+                <button class="button" type="button">Veja Mais</button>
               </div>
             </div>
           </div>
         </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
       </div>
     </main>
     <script type="text/javascript" src="js/script.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
   </body>
 </html>
