Alteração do detalhes

--- a/jesus/index.html
+++ b/jesus/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A Magia do Biscuit</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
   </head>
   <body>
     <header id="header">
@@ -28,28 +26,19 @@
     </header>
     <h1>Destaques</h1>
     <main class="destaque">
-      <div class="slide-container swiper">
-        <div class="slide-content">
-          <div class="card-wrapper swiper-wrapper">
-            <div class="card swiper-slide">
-              <div class="image-content">
-                <span class="overlay"></span>
-                <div class="card-image">
-                  <img src="imagens/12023-11-15 at 09.42.34.jpg" alt="Terço" class="card-img">
+      <section>
+        <div class="conteiner"><!-- container -->
+          <div class="detalhes-conteiner"><!-- content -->
+            <div class="produtos"><!-- card -->
+              <div class="produtos-conteiner"><!-- card-content -->
+                <div class="imagem"><!-- image -->
+                  <img src="imagens/12023-11-15 at 09.42.34.jpg" alt="Terço">
                 </div>
-              </div>
-              <div class="card-content">
-                <h2 class="name">Terço</h2>
-                <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum totam porro possimus nisi perspiciatis, consequuntur blanditiis nostrum quibusdam illum necessitatibus libero repellendus, modi doloremque dignissimos eaque! Animi illo excepturi ullam.</p>
-                <button class="button" type="button">Veja Mais</button>
               </div>
             </div>
           </div>
         </div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-pagination"></div>
-      </div>
+      </section>
     </main>
     <script type="text/javascript" src="js/script.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
