--- a/jesus/index.html
+++ b/jesus/index.html
@@ -92,6 +92,72 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="conteiner"><!-- container -->
+          <div class="detalhes-conteiner"><!-- content -->
+            <div class="produtos"><!-- card -->
+              <div class="produtos-conteiner"><!-- card-content -->
+                <div class="imagem"><!-- image -->
+                  <img src="imagens/12023-11-15 at 09.42.34.jpg" alt="Terço">
+                </div>
+                <div class="midia-social"><!-- social-media -->
+                  <i class='bx bxl-facebook-circle'></i>
+                  <i class='bx bxl-twitter'></i>
+                  <i class='bx bxl-github'></i>
+                </div>
+                <div class="nome-produto"><!-- name-profession -->
+                  <span class="terco">Terço</span>
+                  <span class="nome">Nossa Senhora de Fátima</span>
+                </div>
+                <div class="avaliacao"><!-- rating -->
+                  <i class='bx bxs-star'></i>
+                  <i class='bx bxs-star'></i>
+                  <i class='bx bxs-star'></i>
+                  <i class='bx bx-star'></i>
+                  <i class='bx bx-star'></i>
+                </div>
+                <div class="botao"><!-- button -->
+                  <button type="button" class="sobre">Terço</button>
+                  <button type="button" class="valor">Valor</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="conteiner"><!-- container -->
+          <div class="detalhes-conteiner"><!-- content -->
+            <div class="produtos"><!-- card -->
+              <div class="produtos-conteiner"><!-- card-content -->
+                <div class="imagem"><!-- image -->
+                  <img src="imagens/12023-11-15 at 09.42.34.jpg" alt="Terço">
+                </div>
+                <div class="midia-social"><!-- social-media -->
+                  <i class='bx bxl-facebook-circle'></i>
+                  <i class='bx bxl-twitter'></i>
+                  <i class='bx bxl-github'></i>
+                </div>
+                <div class="nome-produto"><!-- name-profession -->
+                  <span class="terco">Terço</span>
+                  <span class="nome">Nossa Senhora de Fátima</span>
+                </div>
+                <div class="avaliacao"><!-- rating -->
+                  <i class='bx bxs-star'></i>
+                  <i class='bx bxs-star'></i>
+                  <i class='bx bxs-star'></i>
+                  <i class='bx bx-star'></i>
+                  <i class='bx bx-star'></i>
+                </div>
+                <div class="botao"><!-- button -->
+                  <button type="button" class="sobre">Terço</button>
+                  <button type="button" class="valor">Valor</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
